<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    android:orientation="vertical">

    <!--Content-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@color/my_white"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <!--Logo-->
        <ImageView

            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <!--Add name-->
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin2"
            android:layout_marginTop="@dimen/margin2"
            android:text="@string/title_thai"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

        <!--User-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Icon-->
            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_user" />

            <!--TextField-->
            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
        <!--Password-->

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Icon-->
            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_password" />

            <!--TextField-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <!--Login-->
        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <!--New register-->
        <TextView
            android:id="@+id/txtNewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin2"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="?android:attr/statusBarColor"
            android:textSize="@dimen/h2"
            android:textStyle="bold|italic" />

    </LinearLayout>


</LinearLayout>